--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
       - name: Hello step
         run: |
-          echo "Welcome to GitHub Actions on all services"
-          echo "This is line 1 command"
+          echo "Hello, ${{ vars.BLANK}}"
+          
 
  
